--- a/web.config
+++ b/web.config
@@ -8,14 +8,12 @@
   <add key="Telerik.StyleSheetManager.TelerikCdn" value="Enabled" />
   </appSettings>
   <connectionStrings>
-    <add name="rtdsConnectionString" connectionString="Data Source=reports.div-log.com;Initial Catalog=RTDS;Persist Security Info=True;User ID=RTDS;Password=southeast1" providerName="System.Data.SqlClient" />
-    <add name="DivLogHRConnectionString" connectionString="Data Source=reports.div-log.com;Initial Catalog=Div-Log_HR;Persist Security Info=True;User ID=RTDS;Password=southeast1" providerName="System.Data.SqlClient" />
-    <add name="zipCodeConnectionString" connectionString="Data Source=reports.div-log.com;Initial Catalog=usZipCodes;Persist Security Info=True;User ID=rtds;Password=southeast1" providerName="System.Data.SqlClient" />
-    <add name="rtdsConnectionStringdev" connectionString="Data Source=RANDYDEV;Initial Catalog=RTDS;Persist Security Info=True;User ID=sa;Password=southeast1" providerName="System.Data.SqlClient" />
-    <add name="rtdsConnectionString_BU" connectionString="Data Source=reports.div-log.com;Initial Catalog=RTDS_BU;Persist Security Info=True;User ID=rtds;Password=southeast1" providerName="System.Data.SqlClient" />
-    <add name="DivLogHRConnectionStringDEV" connectionString="Data Source=real.realwebs.com\MSSQLSERVER08r2,1435;Initial Catalog=Div-Log_HR;Persist Security Info=True;User ID=RTDS;Password=southeast1" providerName="System.Data.SqlClient" />
-    <add name="SEUreports.My.MySettings.RTDS" connectionString="Data Source=reports.div-log.com;Initial Catalog=RTDS;Persist Security Info=True;User ID=rtds;Password=southeast1" providerName="System.Data.SqlClient" />
-    <add name="SEUreports.My.MySettings.SEUSQL" connectionString="Data Source=reports.div-log.com;Initial Catalog=RTDS;Persist Security Info=True;User ID=rtds;Password=southeast1" providerName="System.Data.SqlClient" />
+    <add name="zipCodeConnectionString" connectionString="Data Source=real.realwebs.com\MSSQLSERVER08r2,1435;Initial Catalog=usZipCodes;Persist Security Info=True;User ID=rtds;Password=southeast1" providerName="System.Data.SqlClient" />
+    <add name="rtdsConnectionString" connectionString="Data Source=RANDYDEV;Initial Catalog=RTDS;Persist Security Info=True;User ID=sa;Password=southeast1" providerName="System.Data.SqlClient" />
+    <add name="rtdsConnectionString_BU" connectionString="Data Source=real.realwebs.com\MSSQLSERVER08r2,1435;Initial Catalog=RTDS_BU;Persist Security Info=True;User ID=rtds;Password=southeast1" providerName="System.Data.SqlClient" />
+    <add name="DivLogHRConnectionString" connectionString="Data Source=real.realwebs.com\MSSQLSERVER08r2,1435;Initial Catalog=Div-Log_HR;Persist Security Info=True;User ID=RTDS;Password=southeast1" providerName="System.Data.SqlClient" />
+    <add name="SEUreports.My.MySettings.RTDS" connectionString="Data Source=real.realwebs.com\MSSQLSERVER08r2,1435;Initial Catalog=RTDS;Persist Security Info=True;User ID=rtds;Password=southeast1" providerName="System.Data.SqlClient" />
+    <add name="SEUreports.My.MySettings.SEUSQL" connectionString="Data Source=real.realwebs.com\MSSQLSERVER08r2,1435;Initial Catalog=RTDS;Persist Security Info=True;User ID=rtds;Password=southeast1" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <location path="admin/ScheduledLoadImporter.aspx">
     <system.web>
